# MyFuture_AI

./: .gitignore  README.md  package-lock.json
ai-model/: README.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251218_0001_add_username_to_users.py
backend/app/: main.py
backend/app/api/: auth.py  public.py
backend/app/api/protected/: orientations.py  results.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  orientation.py  result.py  user.py
backend/app/schemas/: auth.py  orientation.py  result.py  user.py
backend/app/services/: auth_service.py  email_service.py  google_id_token.py
docs/: ai-design.md  api-specs.md  architecture.md  changes-since-last-commit.md  project-architecture.md  security.md  thesis-notes.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/docs/: cahier-des-charges.md  roadmap.md
frontend/src/: App.tsx
frontend/src/auth/: AuthProvider.tsx  RequireAuth.tsx  googleIdentity.ts
frontend/src/components/: AdviceSection.tsx  CareerAspiration.tsx  ConsultationButton.tsx  ErrorBoundary.tsx  GradeInput.tsx  LanguageSelector.tsx  OrientationForm.tsx  PublicHeader.tsx  ResultsPage.tsx  SecureFileUpload.tsx  SecurityAudit.tsx  SecurityDashboard.tsx  SecurityProvider.tsx  ShareResults.tsx
frontend/src/config/: consultationConfig.ts
frontend/src/hooks/: useCSPMonitor.ts  usePDFGenerator.ts  (+5 more)
mobile-app/: README.md
(+32 files in other folders)
